add nvidia build

--- a/files/usr/lib/bootc/install/10-timesink.toml
+++ b/files/usr/lib/bootc/install/10-timesink.toml
@@ -2,4 +2,4 @@
 type = "btrfs"
 
 [install]
-kargs = ["rd.luks.options=discard,tpm2-device=auto"]
+kargs = ["rd.luks.options=discard,tpm2-device=auto", "quiet", "splash"]
