--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         major_version: [40]
-        build_target: [main]
+        build_target: [main, nvidia]
         include:
           - major_version: 40
             is_latest_version: true
