enable luks install

--- a/files/usr/lib/bootc/install/10-timesink.toml
+++ b/files/usr/lib/bootc/install/10-timesink.toml
@@ -3,3 +3,4 @@ type = "btrfs"
 
 [install]
 kargs = ["rd.luks.options=discard,tpm2-device=auto", "quiet", "splash"]
+block = ["tpm2-luks", "direct"]
