add akmod key debugging

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,8 +93,9 @@ jobs:
 
       - name: Retrieve akmods signing keys
         run: |
-          mkdir certs
+          mkdir -p certs
           echo "${{ secrets.AKMOD_PRIVKEY }}" > certs/private_key.priv
+          wc -c certs/private_key.priv
 
       - name: Build Image
         id: build_image
