--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,26 +65,27 @@ jobs:
         shell: bash
         run: |
           FVER="${{ matrix.major_version }}"
-          TAGS=()
+          SRC="nostale3210/${{ env.IMAGE_NAME }}"
+          TAGS=""
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            TAGS+=("pr-${{ github.event.number }}")
+            TAGS+="${SRC}:pr-${{ github.event.number }}"
           else
-            TAGS+=("${FVER}")
-            TAGS+=("${FVER}-$(date +%Y%m%d)")
+            TAGS+="${SRC}:${FVER}"
+            TAGS+=",${SRC}:${FVER}-$(date +%Y%m%d)"
             if [[ "${{ matrix.is_latest_version }}" == "true" ]]; then
-              TAGS+=("latest")
+              TAGS+=",${SRC}:latest"
             fi
             if [[ "${{ matrix.is_stable_version }}" == "true" ]]; then
-              TAGS+=("stable")
+              TAGS+=",${SRC}:stable"
             fi
             if [[ "${{ matrix.is_oldstable_version }}" == "true" ]]; then
-              TAGS+=("oldstable")
+              TAGS+=",${SRC}:oldstable"
             fi
           fi
           echo "Publishing with the following tags: "
-          echo "${TAGS[*]}"
+          echo "${TAGS}"
           
-          echo "TAGS=${TAGS[*]}" >> $GITHUB_OUTPUT
+          echo "TAGS=${TAGS}" >> $GITHUB_OUTPUT
 
       - name: Pull base image
         uses: Wandalen/wretry.action@v3.5.0
