--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,19 +113,13 @@ jobs:
           secrets: |
             "AKMOD_PRIVKEY=${{ secrets.AKMOD_PRIVKEY }}"
 
-      - name: Lowercase Registry
-        id: registry_case
-        uses: ASzc/change-string-case-action@v6
-        with:
-          string: ${{ env.IMAGE_REGISTRY }}
-
       - uses: sigstore/cosign-installer@v3.5.0
         if: github.event_name != 'pull_request' # signing disabled for PRs because PRs from outside repos wont have access to your signing secret
 
       - name: Sign container image
         if: github.event_name != 'pull_request' # signing disabled for PRs because PRs from outside repos wont have access to your signing secret
         env:
-          TAGS: ${{ steps.push.outputs.outputs && fromJSON(steps.push.outputs.outputs).digest }} # hash of the new image, to make sure we sign the right one
+          TAGS: steps.build_image.outputs.digest }} # hash of the new image, to make sure we sign the right one
           COSIGN_EXPERIMENTAL: false
           COSIGN_PRIVATE_KEY: ${{ secrets.SIGNING_SECRET }}
         run: |
