--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
           else
             TAGS+="${SRC}:${FVER}"
             TAGS+=",${SRC}:${FVER}-$(date +%Y%m%d)"
-            TAGS+="${SRC}:${{ github.run_id }}"
+            TAGS+=",${SRC}:${{ github.run_id }}"
             if [[ "${{ matrix.is_latest_version }}" == "true" ]]; then
               TAGS+=",${SRC}:latest"
             fi
