use build_image output digest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,6 @@ jobs:
           else
             TAGS+="${SRC}:${FVER}"
             TAGS+=",${SRC}:${FVER}-$(date +%Y%m%d)"
-            TAGS+=",${SRC}:${{ github.run_id }}"
             if [[ "${{ matrix.is_latest_version }}" == "true" ]]; then
               TAGS+=",${SRC}:latest"
             fi
@@ -123,4 +122,4 @@ jobs:
           COSIGN_EXPERIMENTAL: false
           COSIGN_PRIVATE_KEY: ${{ secrets.SIGNING_SECRET }}
         run: |
-          cosign sign -y --key env://COSIGN_PRIVATE_KEY ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_id }}
+          cosign sign -y --key env://COSIGN_PRIVATE_KEY ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}@${{ steps.build_image.outputs.digest }}
