point to matrix var

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,7 +109,7 @@ jobs:
           layers: true
           oci: false
           extra-args: |
-            --target ${{ env.IMAGE_FLAVOR }}
+            --target ${{ matrix.build_target }}
             --secret id=AKMOD_PRIVKEY,src=/tmp/certs/AKMOD_PRIVKEY
             --compress zstd:chunked
 
