add version label

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
           labels: |
             org.opencontainers.image.title=${{ env.IMAGE_NAME }}
             org.opencontainers.image.description=${{ env.IMAGE_NAME }}
+            org.opencontainers.image.version=${{ matrix.build_target }}
 
       - name: Generate tags
         id: generate-tags
