--- a/.github/workflows/build-iso.yml
+++ b/.github/workflows/build-iso.yml
@@ -1,7 +1,7 @@
 on:
   push:
     paths:
-      - '.github/workflows/release-iso.yml'
+      - '.github/workflows/build-iso.yml'
   workflow_dispatch:
 
 env:
@@ -22,12 +22,25 @@ jobs:
         image_name: 
           - timesinkc-main
           - timesinkc-nvidia
+          - timesinkc-cosmic-main
+          - timesinkc-cosmic-nvidia
         major_version:
           - 40
         image_tag:
           - latest
 
     steps:
+      - name: Determine variant
+        id: var
+        shell: bash
+        run: |
+          if [[ "${{ matrix.image_name}}" =~ "cosmic" ]]; then
+            VARIANT="Kinoite"
+          else
+            VARIANT="Silverblue"
+          fi
+          echo "variant=${VARIANT}" >> $GITHUB_OUTPUT
+
       - name: Generate ISO  
         uses: jasonn3/build-container-installer@main
         id: build
@@ -35,7 +48,7 @@ jobs:
           arch: x86_64
           image_name: ${{ matrix.image_name }}
           image_repo: ${{ env.IMAGE_REGISTRY }}
-          variant: 'Silverblue'
+          variant: ${{ steps.var.outputs.variant }}
           version: ${{ matrix.major_version }}
           image_tag: ${{ matrix.image_tag }}
           iso_name: ${{ matrix.image_name }}-${{ matrix.image_tag }}.iso
