replace proot with bwrap
move programs from distrobox to nx

--- a/files/usr/share/timesink/config/boxes/cli.ini
+++ b/files/usr/share/timesink/config/boxes/cli.ini
@@ -4,9 +4,9 @@ init=false
 pull=false
 nvidia=true
 init_hooks=""
-additional_packages="atuin zoxide bat eza fd fzf ripgrep"
+additional_packages=""
 pre_init_hooks=""
 start_now=true
 replace=true
-exported_bins="/usr/bin/bat /usr/bin/eza /usr/bin/fd /usr/bin/fzf /usr/bin/rg"
+exported_bins=""
 exported_bins_path="$HOME/.bin"
