--- a/files/usr/lib/systemd/user/dotfile-manager.service
+++ b/files/usr/lib/systemd/user/dotfile-manager.service
@@ -7,6 +7,7 @@ StartLimitBurst=3
 
 [Service]
 Type=oneshot
+ExecStartPre=/usr/bin/bash -c 'until ping -c1 9.9.9.9; do sleep 1; done'
 ExecStart=/usr/libexec/dotfile-manager
 RestartSec=20
 Restart=on-failure
