make sure user is logged in for various services

--- a/files/usr/lib/systemd/user/assemble.service
+++ b/files/usr/lib/systemd/user/assemble.service
@@ -8,7 +8,7 @@ ConditionACPower=true
 
 [Service]
 Type=oneshot
-ExecStartPre=/usr/bin/bash -c 'until ping -c1 9.9.9.9; do sleep 1; done'
+ExecStartPre=/usr/bin/bash -c 'until [[ $(id -u) -ge 1000 ]] && ping -c1 9.9.9.9; do sleep 1; done'
 ExecStart=/usr/libexec/assembler
 RestartSec=20
 Restart=on-failure
