include statically linked binaries for init

--- a/files/usr/share/timesink/atomic/boot.conf
+++ b/files/usr/share/timesink/atomic/boot.conf
@@ -1,8 +1,8 @@
-title TSD Deployment INSERT_DEPLOYMENT
+title ALD Deployment INSERT_DEPLOYMENT
 version INSERT_DEPLOYMENT
 linux /INSERT_DEPLOYMENT/vmlinuz
 initrd /INSERT_DEPLOYMENT/initramfs.img
-options root=UUID=f8989f91-3924-4b9d-98f5-944e9410b086 ro rd.luks.uuid=luks-6bf9d040-f0fb-4c94-88f2-965795af4e88 rhgb quiet init=/deploy/INSERT_DEPLOYMENT/usr/sbin/mount-dep.sh rd.luks.options=tpm2-device=auto,discard rd.driver.blacklist=nouveau modprobe.blacklist=nouveau nvidia-drm.modeset=1 nvidia-drm.fbdev=1
+options root=UUID=ROOT_UUID ro rd.luks.uuid=LUKS_UUID rhgb quiet init=/var/deployments/init/INSERT_DEPLOYMENT.sh rd.luks.options=tpm2-device=auto,discard rd.driver.blacklist=nouveau modprobe.blacklist=nouveau nvidia-drm.modeset=1 nvidia-drm.fbdev=1
 grub_users $grub_users
 grub_arg --unrestricted
 grub_class fedora
