Introduce variable ALD_PATH and ald rm

--- a/files/usr/share/timesink/atomic/boot.conf
+++ b/files/usr/share/timesink/atomic/boot.conf
@@ -2,7 +2,7 @@ title ALD Deployment INSERT_DEPLOYMENT
 version INSERT_DEPLOYMENT
 linux /INSERT_DEPLOYMENT/vmlinuz
 initrd /INSERT_DEPLOYMENT/initramfs.img
-options root=UUID=ROOT_UUID ro rd.luks.uuid=LUKS_UUID rhgb quiet init=/var/deployments/init/INSERT_DEPLOYMENT.sh rd.luks.options=tpm2-device=auto,discard rd.driver.blacklist=nouveau modprobe.blacklist=nouveau nvidia-drm.modeset=1 nvidia-drm.fbdev=1
+options root=UUID=INSERT_ROOT_UUID_HERE ro rd.luks.uuid=luks-INSERT_LUKS_UUID_HERE rhgb quiet init=ALD_PATH/init/INSERT_DEPLOYMENT.sh rd.luks.options=tpm2-device=auto,discard
 grub_users $grub_users
 grub_arg --unrestricted
 grub_class fedora
