--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,12 +93,6 @@ jobs:
       - name: Build image
         shell: bash
         run: |
-          SRC="${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}"
-          PR="${{ env.PR_TAG }}"
-          VER="${{ env.VER_TAG }}"
-          DATE="${{ env.DATE_TAG }}"
-          LATEST="${{ env.LATEST_TAG }}"
-          STABLE="${{ env.STABLE_TAG }}"
           podman build --build-arg=SOURCE_ORG="${{ env.SOURCE_ORG }}" \
             --build-arg=SOURCE_IMAGE="${{ env.SOURCE_IMAGE }}" \
             --build-arg=FEDORA_MAJOR_VERSION="${{ matrix.major_version }}" \
@@ -108,46 +102,38 @@ jobs:
             --label=org.opencontainers.image.version="${{ matrix.build_target }}" \
             --pull=newer --secret=id=AKMOD_PRIVKEY,src=/tmp/certs/AKMOD_PRIVKEY \
             --target="${{ matrix.desktop }}-${{ matrix.build_target }}" \
-            --tag="${PR:-"${SRC}:$(date +%N)"}" \
-            --tag="${VER:-${SRC}:"$(date +%N)"}" \
-            --tag="${DATE:-"${SRC}:$(date +%N)"}" \
-            --tag="${LATEST:-"${SRC}:$(date +%N)"}" \
-            --tag="${STABLE:-"${SRC}:$(date +%N)"}" \
+            --tag="localhost/timesink" \
             -f ./Containerfile
 
       - name: Push image
         shell: bash
         run: |
           podman login --username="${{ github.actor }}" --password="${{ secrets.GITHUB_TOKEN }}" ghcr.io
-          FAILED=()
+
           push_pr() {
-            podman push "${{ env.PR_TAG }}" "${{ env.PR_TAG }}" \
-              --compression-format=zstd:chunked --tls-verify=true ||
-              FAILED+=("PR")
+            FAILED=()
+            podman push "localhost/timesink" "${{ env.PR_TAG }}" \
+              --compression-format=zstd:chunked --tls-verify=true || FAILED+=("PR")
             if [[ "${{ github.event_name }}" == "pull_request" && "${FAILED[*]}" == *"PR"* ]]; then
-              echo "PR failed!" && exit 1
-            else
-              exit 0
-            fi
+              echo "PR failed!" && return 1
+            else return 0; fi
           }
 
           push_tag() {
             TAG="$1"
-            podman push "${TAGS[$TAG]}" "${TAGS[$TAG]}" \
+            FAILED=()
+            podman push "localhost/timesink" "${TAGS[$TAG]}" \
               --compression-format=zstd:chunked --tls-verify=true \
-              --sign-by-sigstore-private-key=/tmp/certs/SIGNING_SECRET.key ||
-              FAILED+=("$TAG")
-            if [[ "$TAG" == "VER" && "${FAILED[*]}" == *"VER"* && "${{ github.event_name }}" != "pull_request" ]]; then
-              echo "Version failed." && exit 1
-            elif [[ "$TAG" == "DATE" && "${FAILED[*]}" == *"DATE"* && "${{ github.event_name }}" != "pull_request" ]]; then
-              echo "Date failed." && exit 1
-            elif [[ "$TAG" == "LATEST" && -n "${{ env.LATEST_TAG }}" && "${FAILED[*]}" == *"LATEST"* ]]; then
-              echo "Latest failed!" && exit 1
-            elif [[ "$TAG" == "STABLE" && -n "${{ env.STABLE_TAG }}" && "${FAILED[*]}" == *"STABLE"* ]]; then
-              echo "Stable failed!" && exit 1
-            else
-              echo "$TAG pushed successfully!" && exit 0
-            fi
+              --sign-by-sigstore-private-key=/tmp/certs/SIGNING_SECRET.key || FAILED+=("$TAG")
+            if [[ "${FAILED[*]}" == *"VER"* && "${{ github.event_name }}" != "pull_request" ]]; then
+              echo "Pushing "${TAGS[$TAG]}" failed!" && return 1
+            elif [[ "${FAILED[*]}" == *"DATE"* && "${{ github.event_name }}" != "pull_request" ]]; then
+              echo "Pushing "${TAGS[$TAG]}" failed!" && return 1
+            elif [[ -n "${{ env.LATEST_TAG }}" && "${FAILED[*]}" == *"LATEST"* ]]; then
+              echo "Pushing "${TAGS[$TAG]}" failed!" && return 1
+            elif [[ -n "${{ env.STABLE_TAG }}" && "${FAILED[*]}" == *"STABLE"* ]]; then
+              echo "Pushing "${TAGS[$TAG]}" failed!" && return 1
+            else echo ""${TAGS[$TAG]}" pushed successfully!" && return 0; fi
           }
 
           declare -A -r TAGS=(
@@ -156,10 +142,13 @@ jobs:
             ["LATEST"]="${{ env.LATEST_TAG }}"
             ["STABLE"]="${{ env.STABLE_TAG }}"
           )
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            push_pr
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then push_pr;
           else
             for TAG in "${!TAGS[@]}"; do
-              (push_tag "$TAG" || (sleep 15 && push_tag "$TAG")) || (sleep 15 && push_tag "$TAG")
+              for try in {1..3}; do
+                if push_tag "$TAG"; then break; fi
+                echo "Try $try out of 3 failed!"
+                sleep 15
+              done
             done
           fi
