zstd:chunked is undercooked

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,7 +125,7 @@ jobs:
           push_pr() {
             FAILED=()
             podman push "$IMAGE" "${{ env.PR_TAG }}" \
-              --compression-format=zstd:chunked --tls-verify=true || FAILED+=("PR")
+              --compression-format=zstd --tls-verify=true || FAILED+=("PR")
             if [[ "${{ github.event_name }}" == "pull_request" && "${FAILED[*]}" == *"PR"* ]]; then
               echo "PR failed!" && return 1
             else return 0; fi
@@ -135,7 +135,7 @@ jobs:
             TAG="$1"
             FAILED=()
             podman push "$IMAGE" "${TAGS[$TAG]}" \
-              --compression-format=zstd:chunked --tls-verify=true \
+              --compression-format=zstd --tls-verify=true \
               --sign-by-sigstore-private-key=/tmp/certs/SIGNING_SECRET.key || FAILED+=("$TAG")
             if [[ "${FAILED[*]}" == *"VER"* && "${{ github.event_name }}" != "pull_request" ]]; then
               echo "Pushing "${TAGS[$TAG]}" failed!" && return 1
