enable fedora 41 builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         major_version:
           - 40
+          - 41
         desktop:
           - silverblue
           - cosmic
@@ -32,8 +33,11 @@ jobs:
           - nvidia
         include:
           - major_version: 40
-            is_latest_version: true
+            is_latest_version: false
             is_stable_version: true
+          - major_version: 41
+            is_latest_version: true
+            is_stable_version: false
 
     steps: 
       - name: Checkout repo
