use official fedora container org for all images

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,8 +58,8 @@ jobs:
             export IMAGE_FLAVOR="${{ matrix.build_target }}"
             echo "IMAGE_NAME=timesinkc-${IMAGE_FLAVOR}" >> $GITHUB_ENV
           else
-            echo "SOURCE_ORG=fedora-ostree-desktops" >> $GITHUB_ENV
-            echo "SOURCE_IMAGE=base" >> $GITHUB_ENV
+            echo "SOURCE_ORG=fedora" >> $GITHUB_ENV
+            echo "SOURCE_IMAGE=fedora-bootc" >> $GITHUB_ENV
 
             export IMAGE_FLAVOR="${{ matrix.build_target }}"
             echo "IMAGE_NAME=timesinkc-${{ matrix.desktop }}-${IMAGE_FLAVOR}" >> $GITHUB_ENV
@@ -107,7 +107,7 @@ jobs:
         uses: hhd-dev/rechunk@v1.0.1
         with:
           ref: localhost/timesink
-          prev-ref: "${{ env.LATEST_TAG }}"
+          prev-ref: "${{ env.VER_TAG }}"
           skip_compression: true
           labels: |
             org.opencontainers.image.title="${{ env.IMAGE_NAME }}"
