--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Build image
         shell: bash
         run: |
-          sudo podman build --build-arg=SOURCE_ORG="${{ env.SOURCE_ORG }}" \
+          podman build --build-arg=SOURCE_ORG="${{ env.SOURCE_ORG }}" \
             --build-arg=SOURCE_IMAGE="${{ env.SOURCE_IMAGE }}" \
             --build-arg=FEDORA_MAJOR_VERSION="${{ matrix.major_version }}" \
             --build-arg=IMAGE_FLAVOR="${{ matrix.build_target }}" \
@@ -102,30 +102,30 @@ jobs:
             --tag="localhost/timesink" \
             -f ./Containerfile
 
-      - name: Rechunk image
-        id: rechunk-image
-        uses: hhd-dev/rechunk@v1.1.3
-        with:
-          ref: localhost/timesink
-          prev-ref: "${{ env.VER_TAG }}"
-          skip_compression: true
-          labels: |
-            org.opencontainers.image.title="${{ env.IMAGE_NAME }}"
-            org.opencontainers.image.description="${{ env.IMAGE_NAME }}"
-            org.opencontainers.image.version="$(date +%Y%m%d)"
+#      - name: Rechunk image
+#        id: rechunk-image
+#        uses: hhd-dev/rechunk@v1.2.1
+#        with:
+#          ref: localhost/timesink
+#          prev-ref: "${{ env.VER_TAG }}"
+#          skip_compression: true
+#          labels: |
+#            org.opencontainers.image.title="${{ env.IMAGE_NAME }}"
+#            org.opencontainers.image.description="${{ env.IMAGE_NAME }}"
+#            org.opencontainers.image.version="$(date +%Y%m%d)"
 
       - name: Push image
         shell: bash
         run: |
-          IMAGE="$(podman pull "${{ steps.rechunk-image.outputs.ref }}")"
-          sudo rm -rf "${{ steps.rechunk-image.outputs.ref }}"
+          IMAGE="localhost/timesink"
+          COMPRESSION_FORMAT="zstd:chunked"
 
           podman login --username="${{ github.actor }}" --password="${{ secrets.GITHUB_TOKEN }}" ghcr.io
 
           push_pr() {
             FAILED=()
             podman push "$IMAGE" "${{ env.PR_TAG }}" \
-              --compression-format=zstd --tls-verify=true || FAILED+=("PR")
+              --compression-format="$COMPRESSION_FORMAT" --tls-verify=true || FAILED+=("PR")
             if [[ "${{ github.event_name }}" == "pull_request" && "${FAILED[*]}" == *"PR"* ]]; then
               echo "PR failed!" && return 1
             else return 0; fi
@@ -135,7 +135,7 @@ jobs:
             TAG="$1"
             FAILED=()
             podman push "$IMAGE" "${TAGS[$TAG]}" \
-              --compression-format=zstd --tls-verify=true \
+              --compression-format="$COMPRESSION_FORMAT" --tls-verify=true \
               --sign-by-sigstore-private-key=/tmp/certs/SIGNING_SECRET.key || FAILED+=("$TAG")
             if [[ "${FAILED[*]}" == *"VER"* && "${{ github.event_name }}" != "pull_request" ]]; then
               echo "Pushing "${TAGS[$TAG]}" failed!" && return 1
